fix: overflow makes code act strange

--- a/src/scss/blog_basic.scss
+++ b/src/scss/blog_basic.scss
@@ -230,8 +230,6 @@ pre {
   font-size: 15px;
   background-color: var(--secondary-950) !important;
   font-family: var(--mono-font-face) !important;
-  text-wrap: wrap;
-  overflow-wrap: anywhere;
   color: var(--primary-700) !important;
 }
 
