--- a/src/scss/raw-components/nav.scss
+++ b/src/scss/raw-components/nav.scss
@@ -20,6 +20,7 @@
     font-size: 14px;
     max-width: 360px;
     overflow-x: auto;
+    overflow-y: hidden;
 
     li {
       position: relative;
